--- a/example/test.html
+++ b/example/test.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Example</title>
 </head>
 <body>
-<p>Fast-Cache</p>
-<script src="../release/bundle.js"></script>
+    <p>example</p>
+    <script src="../release/bundle.js"></script>
+    <script>
+        var FC = window.FashCache;
+        var cache = new FC();
+        cache.set("a",100);
+        alert(cache.get("a"));
+    </script>
 </body>
 </html>
